[project]
authors = [{ name = "yyhhenry", email = "yyhhenry@foxmail.com" }]
dependencies = [
  "torch==2.1.2",
  "torchvision>=0.16.2",
  "setuptools>=69.2.0",
  "tqdm>=4.66.2",
  "safetensors>=0.4.2",
]
description = "Default template for PDM package"
license = { text = "MIT" }
name = "torch-mnist-bench"
readme = "README.md"
requires-python = "==3.10.*"
version = "0.1.0"

[tool.pdm]
distribution = false

[[tool.pdm.source]]
exclude_packages = ["*"]
include_packages = ["torch", "torchvision"]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
