[tool.poetry]
package-mode = false
name = "torch-mnist-bench"
version = "0.1.0"
description = ""
authors = ["yyhhenry <yyhhenry@foxmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = { version = "2.1.2", source = "cu121" }
torchvision = { version = "0.16.2", source = "cu121" }
tqdm = "^4.66.2"
safetensors = "^0.4.3"

[[tool.poetry.source]]
name = "cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
